--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
+* Run `npm install` to fix Angular Devkit package that `npm audit` upgraded to version 10
 * MirageJS mock server
+* Implement Heroes HTTP service
