Add 'active' style to side navigation menu

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+* Workflow (requestor, approval)
+* Fix created hero always showing up at the top
+* Barcode scanner
+
 * Add user management
 - Service vs. local/custom
 - https://docs.microsoft.com/en-us/azure/active-directory/develop/tutorial-v2-angular (need to make sure it makes sense to grant AD access)
